--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - Omnibox</title>
+    <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -94,5 +95,6 @@
     
     <p>For questions or concerns, please contact us at <a href="mailto:ltmsim001@myuct.ac.za">ltmsim001@myuct.ac.za</a>.</p>
     <p><em>Last updated: 20/02/2025</em></p>
+    <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
 </body>
 </html>
